# school-system-redux

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-eec43d6e370109b545738b72837f63aed8f02507e68dbcd6a5e397f86473b663.json
config/: docker-compose.yml  schema.sql
migrations/: 20250401203321_init_schema.sql  20250403050235_create_db.sql  20250403173433_course_meetings_not_null.sql  20250404001509_major_not_null.sql
migrations_test/: 20250401205241_init_test_db.sql
src/: main.rs
src/models/: course.rs  course_meeting_time.rs  course_offering.rs  course_prerequisite.rs  department.rs  mod.rs  registration.rs  student_profile.rs  term.rs  user.rs
src/security/: password.rs
src/services/: course_service.rs  department_service.rs  mod.rs  user_service.rs
src/tests/: course.rs
src/ui/: app.rs  login.rs  mod.rs  page.rs  register.rs
