[package]
name = "school_system"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
cargo = "0.86.0"
chrono = "0.4.40"
dotenvy = "0.15.7"
install = "0.0.0"
rand = "0.9.0"
slint = "1.10.0"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "uuid", "migrate", "chrono" ] }
tokio = { version = "1.44.1", features = ["rt", "macros", "rt-multi-thread"] }

[dependencies.uuid]
version = "1.16.0"
features = [
    "v4",
]

[profile.release]
codegen-units = 1
lto = "fat"
